--- a/packages/game-matcher-api/package.json
+++ b/packages/game-matcher-api/package.json
@@ -2,7 +2,9 @@
   "name": "gamer-matcher-server",
   "version": "1.0.0",
   "description": "",
+  "main": "server/server.js",
   "scripts": {
+    "start": "node ./server/server.js",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "ncu": "ncu",
@@ -19,18 +21,15 @@
     "url": "https://github.com/javi11/gamer-matcher/issues"
   },
   "homepage": "https://github.com/javi11/gamer-matcher#readme",
-  "devDependencies": {
-    "documentation": "^6.1.0",
-    "eslint": "4.18.2",
-    "eslint-config-airbnb-base": "12.1.0",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-plugin-import": "2.9.0",
-    "eslint-plugin-prettier": "2.6.0",
-    "jest": "^22.4.2",
-    "npm-check-updates": "^2.14.1",
-    "nsp": "^3.2.1",
-    "pre-commit": "^1.2.2",
-    "prettier": "^1.11.1",
-    "lerna": "^2.9.0"
+  "dependencies": {
+    "fastify": "^1.1.1",
+    "fastify-graphql": "^4.0.0",
+    "fastify-plugin": "^0.2.2",
+    "glob": "^7.1.2",
+    "graphql": "^0.12.0",
+    "graphql-compose": "^3.0.4",
+    "graphql-compose-mongoose": "^3.0.0",
+    "mongoose": "^5.0.6",
+    "mongoose-timestamp": "^0.6.0"
   }
 }
