chore: move app to other repository

--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "start": "node ./server/server.js",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "ncu": "ncu",
-    "nsp": "nsp",
-    "lerna": "lerna"
+    "nsp": "nsp"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/javi11/gamer-matcher.git"
+    "url": "git+https://github.com/javi11/gamer-matcher-api.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/javi11/gamer-matcher/issues"
+    "url": "https://github.com/javi11/gamer-matcher-api/issues"
   },
-  "homepage": "https://github.com/javi11/gamer-matcher#readme",
+  "homepage": "https://github.com/javi11/gamer-matcher-api#readme",
   "devDependencies": {
     "documentation": "^6.1.0",
     "eslint": "4.18.2",
@@ -30,7 +30,17 @@
     "npm-check-updates": "^2.14.1",
     "nsp": "^3.2.1",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.11.1",
-    "lerna": "^2.9.0"
+    "prettier": "^1.11.1"
+  },
+  "dependencies": {
+    "fastify": "^1.1.1",
+    "fastify-graphql": "^4.0.0",
+    "fastify-plugin": "^0.2.2",
+    "glob": "^7.1.2",
+    "graphql": "^0.12.0",
+    "graphql-compose": "^3.0.4",
+    "graphql-compose-mongoose": "^3.0.0",
+    "mongoose": "^5.0.6",
+    "mongoose-timestamp": "^0.6.0"
   }
 }
