--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./server/server.js",
     "lint": "eslint .",
-    "test": "echo \"No test specified\"",
+    "test": "npm run lint && echo \"No test specified\"",
     "ncu": "ncu",
     "nsp": "nsp"
   },
