--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^1.11.1"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "fastify": "^1.1.1",
     "fastify-graphql": "^4.0.0",
     "fastify-plugin": "^0.2.2",
