fix: add more time to access token

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,7 +2,7 @@
   "auth": {
     "issuer": "gamer-matcher",
     "audience": "gamer-matcher.es",
-    "accessTokenTTL": 3600,
-    "refreshTokenTTL": 15780000
+    "accessTokenTTL": 31536000,
+    "refreshTokenTTL": 31536000
   }
 }
