--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "fastify-plugin": "^0.2.2",
     "glob": "^7.1.2",
     "graphql": "^0.12.0",
-    "graphql-compose": "^3.0.4",
-    "graphql-compose-mongoose": "^3.0.0",
+    "graphql-compose": "^3.1.1",
+    "graphql-compose-connection": "^3.0.0",
+    "graphql-compose-mongoose": "^3.1.2",
+    "graphql-compose-relay": "^1.1.10",
     "graphql-playground-html": "^1.5.5",
     "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.5",
