--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "ajv": "^6.2.1",
     "apollo-errors": "1.5.1",
-    "bcrypt": "^1.0.3",
+    "bcrypt": "1.0.2",
     "boom": "^7.2.0",
     "fastify": "^1.1.1",
     "fastify-boom": "^0.1.0",
